Adding ReportHIVInfection to outputs, to better get a sense of who is transmitting

--- a/InputFiles/Templates/config_transmission.json
+++ b/InputFiles/Templates/config_transmission.json
@@ -395,7 +395,9 @@
        "Report_HIV_ByAgeAndGender_Stop_Year": 2050,
        "Report_HIV_ByAgeAndGender_Stratify_Infected_By_CD4": 0,
        "Report_HIV_Event_Channels_List": [],
-       "Report_HIV_Infection": 0,
+       "Report_HIV_Infection": 1,
+       "Report_HIV_Infection_Start_Year": 2000,
+       "Report_HIV_Infection_Stop_Year": 2045,
        "Report_HIV_Mortality": 0,
        "Report_HIV_Mortality_Start_Year": 2000,
        "Report_HIV_Period": 365,
