Attempting to get ARTStatus IP to work, for tracking ART naive and ART dropout

--- a/InputFiles/Templates/config_transmission.json
+++ b/InputFiles/Templates/config_transmission.json
@@ -386,7 +386,7 @@
        "Report_HIV_ByAgeAndGender_Collect_Circumcision_Data": 1,
        "Report_HIV_ByAgeAndGender_Collect_Gender_Data": 1,
        "Report_HIV_ByAgeAndGender_Collect_HIV_Data": 1,
-       "Report_HIV_ByAgeAndGender_Collect_IP_Data": [],
+       "Report_HIV_ByAgeAndGender_Collect_IP_Data": ["ARTStatus"],
        "Report_HIV_ByAgeAndGender_Collect_Intervention_Data": [],
        "Report_HIV_ByAgeAndGender_Collect_On_Art_Data": 0,
        "Report_HIV_ByAgeAndGender_Event_Counter_List": [],
@@ -398,7 +398,7 @@
        "Report_HIV_Infection": 1,
        "Report_HIV_Infection_Start_Year": 2000,
        "Report_HIV_Infection_Stop_Year": 2045,
-       "Report_HIV_Mortality": 0,
+       "Report_HIV_Mortality": 1,
        "Report_HIV_Mortality_Start_Year": 2000,
        "Report_HIV_Period": 365,
        "Report_Node_Event_Recorder": 0,
