Preparing for minimal scenario

--- a/InputFiles/Templates/config.json
+++ b/InputFiles/Templates/config.json
@@ -96,11 +96,11 @@
       "Infectious_Period_Std_Dev": 10,
       "Infectivity_Scale_Type": "CONSTANT_INFECTIVITY",
       "Custom_Individual_Events": [
-	     "Received_Traditional_MC",
-             "ShouldNotHappen",
-             "OnEffectiveART",
-        "Traditional_MC",
-	     "NoTrigger",
+         "Received_Traditional_MC",
+         "ShouldNotHappen",
+         "OnEffectiveART",
+         "Traditional_MC",
+         "NoTrigger",
          "End_of_TMC",
          "Needs_PMTCT_Diagnostic_Test",
          "Commercial_DelayFromDebutToUptake",
@@ -325,11 +325,11 @@
          "Ready_For_TMC",
          "Schedued_To_Get_TMC",
          "WillDoTraditionalMC",
-		 "Received_PrEP",
-		 "Received_Placebo",
-     "ReceivePlacebo",
-		 "GoOffDrug",
-		 "OnDrug"
+         "Received_PrEP",
+         "Received_Placebo",
+      "ReceivePlacebo",
+         "GoOffDrug",
+         "OnDrug"
       ],
       "Load_Balance_Filename": "",
       "Load_Balance_Scheme": "STATIC",
@@ -379,30 +379,130 @@
       "Report_HIV_ByAgeAndGender_Add_Transmitters": 0,
       "Report_HIV_ByAgeAndGender_Collect_Age_Bins_Data": [
          0,
-		 15,
-		 20,
-       25,
-       30,
-       35,
-       40,
-       45,
-       50,
-       55,
-       60,
-       65,
-		 99
-      ],
+         1,
+         2,
+         3,
+         4,
+         5,
+         6,
+         7,
+         8,
+         9,
+         10,
+         11,
+         12,
+         13,
+         14,
+         15,
+         16,
+         17,
+         18,
+         19,
+         20,
+         21,
+         22,
+         23,
+         24,
+         25,
+         26,
+         27,
+         28,
+         29,
+         30,
+         31,
+         32,
+         33,
+         34,
+         35,
+         36,
+         37,
+         38,
+         39,
+         40,
+         41,
+         42,
+         43,
+         44,
+         45,
+         46,
+         47,
+         48,
+         49,
+         50,
+         51,
+         52,
+         53,
+         54,
+         55,
+         56,
+         57,
+         58,
+         59,
+         60,
+         61,
+         62,
+         63,
+         64,
+         65,
+         66,
+         67,
+         68,
+         69,
+         70,
+         71,
+         72,
+         73,
+         74,
+         75,
+         76,
+         77,
+         78,
+         79,
+         80,
+         81,
+         82,
+         83,
+         84,
+         85,
+         86,
+         87,
+         88,
+         89,
+         90,
+         91,
+         92,
+         93,
+         94,
+         95,
+         96,
+         97,
+         98,
+         99
+      ], 
       "Report_HIV_ByAgeAndGender_Collect_Circumcision_Data": 1,
       "Report_HIV_ByAgeAndGender_Collect_Gender_Data": 1,
       "Report_HIV_ByAgeAndGender_Collect_HIV_Data": 1,
       "Report_HIV_ByAgeAndGender_Collect_IP_Data": ["Risk"],
       "Report_HIV_ByAgeAndGender_Collect_Intervention_Data": [],
       "Report_HIV_ByAgeAndGender_Collect_On_Art_Data": 0,
-      "Report_HIV_ByAgeAndGender_Event_Counter_List": ["HCTTestingLoop1","ARTStaging9","HCTTestingLoop0","Needs_PMTCT_Diagnostic_Test","HIV_Positive_at_ANC","HIV_Negative_at_ANC_NULL","ARTStaging0","ARTStaging1","ARTStaging_Negative_NULL"],
+      "Report_HIV_ByAgeAndGender_Event_Counter_List": [
+         "HCTTestingLoop1",
+         "ARTStaging9",
+         "HCTTestingLoop0",
+         "Needs_PMTCT_Diagnostic_Test",
+         "HIV_Positive_at_ANC",
+         "HIV_Negative_at_ANC_NULL",
+         "ARTStaging0",
+         "ARTStaging1",
+         "ARTStaging_Negative_NULL", 
+         "GaveBirth",
+         "Program_VMMC",
+         "Non_Program_MC"
+      ],
       "Report_HIV_ByAgeAndGender_Has_Intervention_With_Name": "",
       "Report_HIV_ByAgeAndGender_Start_Year": 1990,
       "Report_HIV_ByAgeAndGender_Stop_Year": 2051,
-      "Report_HIV_ByAgeAndGender_Stratify_Infected_By_CD4": 0,
+      "Report_HIV_ByAgeAndGender_Stratify_Infected_By_CD4": 1,
       "Report_HIV_Event_Channels_List": [],
       "Report_HIV_Infection": 0,
       "Report_HIV_Mortality": 0,
