--- a/simtools.ini
+++ b/simtools.ini
@@ -11,7 +11,7 @@ input_root = /gpfs/data/bershteynlab/EMOD/citrod01/MWI_calib_original_20220122/I
 base_collection_id =
 
 # singularity command to load the execution environment and run the executable
-singularity_command = singularity exec -B {working_directory}:/data --pwd /data/$current_folder ~/images/dtk_20200306.sif Eradication
+singularity_command = singularity exec --env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/gpfs/home/$USER/lib -B {working_directory}:/data --pwd /data/$current_folder /gpfs/data/bershteynlab/EMOD/singularity_images/centos_dtk-build.sif ../Assets/EradicationMalaria-Ongoing_2023_01_05
 exe_path = 
 
 # Directory containing dtk_post_process.py, if needed
