Repairing config files and cleaning up workspace.

--- a/InputFiles/Templates/config.json
+++ b/InputFiles/Templates/config.json
@@ -89,7 +89,7 @@
       "Susceptibility_Initialization_Distribution_Type": "DISTRIBUTION_OFF",
       "Post_Infection_Transmission_Multiplier": 1,
       "Post_Infection_Mortality_Multiplier": 0,
-      "Incubation_Period_Distribution": "FIXED_DURATION",
+      "Incubation_Period_Distribution": "CONSTANT_DISTRIBUTION",
       "Individual_Sampling_Type": "FIXED_SAMPLING",
       "Infection_Updates_Per_Timestep": 1,
       "Infectious_Period_Mean": 12,
@@ -99,13 +99,14 @@
          "Received_Traditional_MC",
          "ShouldNotHappen",
          "OnEffectiveART",
-         "Traditional_MC",
          "NoTrigger",
          "End_of_TMC",
          "Needs_PMTCT_Diagnostic_Test",
          "Commercial_DelayFromDebutToUptake",
          "LinkFromNegativeTestToPrEP",
          "Program_VMMC",
+         "Traditional_MC",
+         "Non_Program_MC",
          "WillNotReceiveTraditionalMaleCircumcision",
          "WillReceiveTraditionalMaleCircumcision",
          "WillReceiveMedicalMaleCircumcision",
@@ -497,7 +498,7 @@
          "ARTStaging_Negative_NULL", 
          "GaveBirth",
          "Program_VMMC",
-         "Non_Program_MC"
+         "Traditional_MC"
       ],
       "Report_HIV_ByAgeAndGender_Has_Intervention_With_Name": "",
       "Report_HIV_ByAgeAndGender_Start_Year": 1990,
@@ -517,6 +518,8 @@
       "STI_Coinfection_Transmission_Multiplier": 5.5,
       "Scenario": "LIVE_SA",
       "Serialization_Test_Cycles": 0,
+      "Serialized_Population_Reading_Type": "NONE",
+      "Serialized_Population_Writing_Type": "NONE",
       "Sexual_Debut_Age_Female_Weibull_Heterogeneity": 0.05,
       "Sexual_Debut_Age_Female_Weibull_Scale": 15.919654846191,
       "Sexual_Debut_Age_Male_Weibull_Heterogeneity": 0.05,
