--- a/InputFiles/Templates/config_mort.json
+++ b/InputFiles/Templates/config_mort.json
@@ -21,8 +21,6 @@
       "Base_Population_Scale_Factor": 0.0001,
 	  "ONE_TO_SIX_HUNDRED_Base_Population_Scale_Factor": 0.0016666666666666668,
       "Base_Year": 1960.5,
-      "Simulation_Duration": 31390.5,
-      "Simulation_Timestep": 30.4166666666667,
       "Birth_Rate_Dependence": "INDIVIDUAL_PREGNANCIES_BY_AGE_AND_YEAR",
       "Birth_Rate_Time_Dependence": "NONE",
       "CD4_At_Death_LogLogistic_Heterogeneity": 0,
@@ -91,7 +89,7 @@
       "Susceptibility_Initialization_Distribution_Type": "DISTRIBUTION_OFF",
       "Post_Infection_Transmission_Multiplier": 1,
       "Post_Infection_Mortality_Multiplier": 0,
-      "Incubation_Period_Distribution": "FIXED_DURATION",
+      "Incubation_Period_Distribution": "CONSTANT_DISTRIBUTION",
       "Individual_Sampling_Type": "FIXED_SAMPLING",
       "Infection_Updates_Per_Timestep": 1,
       "Infectious_Period_Mean": 12,
@@ -99,10 +97,10 @@
       "Infectivity_Scale_Type": "CONSTANT_INFECTIVITY",
       "Custom_Individual_Events": [
 	     "Received_Traditional_MC",
-             "ShouldNotHappen",
-             "OnEffectiveART",
-        "Traditional_MC",
-	     "NoTrigger",
+         "ShouldNotHappen",
+         "OnEffectiveART",
+         "Traditional_MC",
+         "NoTrigger",
          "End_of_TMC",
          "Needs_PMTCT_Diagnostic_Test",
          "Commercial_DelayFromDebutToUptake",
@@ -398,6 +396,7 @@
       "Report_HIV_Infection": 0,
       "Report_HIV_Mortality": 1,
       "Report_HIV_Mortality_Start_Year": 2000,
+      "Report_HIV_Mortality_Stop_Year": 2045,
       "Report_HIV_Period": 365,
       "Report_Node_Event_Recorder": 0,
       "Report_Relationship_End": 0,
@@ -409,12 +408,15 @@
       "STI_Coinfection_Transmission_Multiplier": 5.5,
       "Scenario": "LIVE_SA",
       "Serialization_Test_Cycles": 0,
+      "Serialized_Population_Reading_Type": "NONE",
+      "Serialized_Population_Writing_Type": "NONE",
       "Sexual_Debut_Age_Female_Weibull_Heterogeneity": 0.05,
       "Sexual_Debut_Age_Female_Weibull_Scale": 15.919654846191,
       "Sexual_Debut_Age_Male_Weibull_Heterogeneity": 0.05,
       "Sexual_Debut_Age_Male_Weibull_Scale": 16.946729660034,
       "Sexual_Debut_Age_Min": 13,
-
+      "Simulation_Duration": 31390.5,
+      "Simulation_Timestep": 30.4166666666667,
       "Simulation_Type": "HIV_SIM",
       "Start_Time": 0,
       "Susceptibility_Scale_Type": "CONSTANT_SUSCEPTIBILITY",
