--- a/simtools.ini
+++ b/simtools.ini
@@ -12,7 +12,7 @@ base_collection_id =
 
 # singularity command to load the execution environment and run the executable
 singularity_command = singularity exec --env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/gpfs/home/$USER/lib -B {working_directory}:/data --pwd /data/$current_folder /gpfs/data/bershteynlab/EMOD/singularity_images/centos_dtk-build.sif ../Assets/EradicationMalaria-Ongoing_2023_01_05
-exe_path = 
+exe_path = /gpfs/data/bershteynlab/EMOD/bin/EradicationMalaria-Ongoing_2023_01_05
 
 # Directory containing dtk_post_process.py, if needed
 python_path = /gpfs/data/bershteynlab/EMOD/dtk_post_process_Malawi
