--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,13 @@ MWI_mort/
 MWI_test/
 MWI_resample/
 MWI_transmission/
+MWI_minimal/
+
 .Rproj.user
+.Rhistory
+MWI_calib_20220422.Rproj
+
+resampled_parameter_sets_20230424_short.csv
 
 slurm_*
 Analysis/.RData
