--- a/InputFiles/Templates/config_transmission.json
+++ b/InputFiles/Templates/config_transmission.json
@@ -84,6 +84,7 @@
          "DelayUntilBooster4",
          "End_of_TMC",
          "GoOffDrug",
+         "HCTTestingLoopRapidTest",
          "HCTTestingLoop0",
          "HCTTestingLoop1",
          "HCTTestingLoop2",
